--- a/_sass/components/_forms.scss
+++ b/_sass/components/_forms.scss
@@ -11,10 +11,23 @@
 }
 
 .form-checkbox-group {
-  display: flex;
-  align-items: center;
-  padding: 0.75rem 0;
+  display: block; /* each checkbox group occupies its own line */
+  padding: 0.5rem 0;
   cursor: pointer;
+}
+
+.form-checkbox-group input[type="checkbox"],
+.form-checkbox-group .task-checkbox {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 0.75rem;
+  width: 1.25em;
+  height: 1.25em;
+}
+
+.form-checkbox-group span {
+  display: inline-block;
+  max-width: calc(100% - 2.25rem);
 }
 
 .task-checkbox {
